setting up my tests

--- a/Assets/Tests/TestPlay/TestPlay.asmdef
+++ b/Assets/Tests/TestPlay/TestPlay.asmdef
@@ -5,7 +5,8 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Assets",
-        "Lance"
+        "Lance",
+        "Carla"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
