Fix TMPro appearing twice in assembly definition

--- a/Assets/Tests/TestPlay/TestPlay.asmdef
+++ b/Assets/Tests/TestPlay/TestPlay.asmdef
@@ -6,8 +6,7 @@
         "Unity.TextMeshPro",
         "Assets",
         "Lance",
-        "Carla",
-        "Unity.TextMeshPro"
+        "Carla"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
