Mobile implementation, added haptic feedback
I have no way of testing it so I'm hoping it works lol

--- a/Assets/Assets.asmdef
+++ b/Assets/Assets.asmdef
@@ -1,4 +1,17 @@
 {
-	"name": "Assets",
-	"references": [ "Unity.TextMeshPro" ]
+    "name": "Assets",
+    "rootNamespace": "",
+    "references": [
+        "Unity.TextMeshPro",
+        "CandyCoded.HapticFeedback"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
